--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
-<!DOCTYPE HTML>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<title>BALLOON</title>
-		<script src="script.js"></script>
-		<link rel="stylesheet" href="style.css">
-		<link rel="icon" href="https://cdn4.iconfinder.com/data/icons/circus-and-amusement-park-flat/64/balloon-show-circus-512.png">
-	</head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>MENU</title>
+	<link rel="stylesheet" href="menu.css">
+	<link rel="icon" href="https://cdn4.iconfinder.com/data/icons/circus-and-amusement-park-flat/64/balloon-show-circus-512.png">
+</head>
+<body>
+	<div class="corpo">
 
+         <h3>GAME BALLOONS</h3>
+		<ul>
+		<li><a href="play.html">JOGAR</a></li>
 
-		<body>
-<div class="banner">   
-    <a href="index.html" class="a2"> MENU</a>
-    
-   
-</div>
-		<div>
-			<p>
-				<h1>NÍVEL</h1>
-				<select name="nivel" id="nivel_jogo">
-					<option value="1">Fácil</option>
-					<option value="2">Normal</option>
-					<option value="3">Difícil</option>
-				</select>
-			</p>
-			<br>
-			<img src="imagens/iniciar.png" onclick="iniciaJogo()">
-		</div>
-	</body>
-	
+        <li><a href="ajuda.html">AJUDA</a></li>
+
+        <li><a href="#">SOBRE</a></li>
+       
+	</ul>
+		
+	</div>
+</body>
 </html>
