--- a/jogo.html
+++ b/jogo.html
@@ -10,7 +10,10 @@
 
 	<body onload="iniciaJogo()">
 		<div id="principal">
-
+ <ul>
+ 	<li><a href="index.html" class="a2"> MENU</a></li>
+    <li><a href="play.html" class="a2"> JOGO</a></li>
+  </ul>
 
 			<table>
 				<tr>
@@ -50,10 +53,6 @@
 		<div id="jogo">
 
 		</div>
-<div class="banner">   
-    <a href="menu.html" class="a2"> MENU</a>
-    <a href="index.html" class="a2"> jogo</a>
-  
 </div>
 	</body>
 	
