--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <li><a href="ajuda.html">AJUDA</a></li>
 
-        <li><a href="#">SOBRE</a></li>
+        <li><a href="sobre.html">SOBRE</a></li>
        
 	</ul>
 		
