--- a/sobre.html
+++ b/sobre.html
@@ -3,9 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SOBRE</title>
+	<link rel="stylesheet" href="menu.css">
 	<link rel="icon" href="https://cdn4.iconfinder.com/data/icons/circus-and-amusement-park-flat/64/balloon-show-circus-512.png">
 </head>
 <body>
-	
+	<ul>
+		<li><a href="index.html" class="a2"> MENU</a></li>
+    <li><a href="play.html" class="a2"> JOGO</a></li>
+	</ul>
+	<fieldset>
+	<p>
+		OLÁ MEU NOME É GIOVANNA, TENHO 20 ANOS, SOU ESTUDANTE 
+		DO 2º PERÍDO DE IPI DO IFPE CAMPUS IGARASSU. 
+		ESSE PROJETO FOI REALIZADO PELA MATÉRIA DE WEB COM O PROFESSOR RANIERE. E O OBJETIVO DESSE JOGO 
+		É UM PASSA TEMPO, PODENDO JOGAR EM QUALQUER LUGAR.
+	</p>	
+	</fieldset>
 </body>
 </html>
