--- a/play.html
+++ b/play.html
@@ -26,7 +26,7 @@
 				</select>
 			</p>
 			<br>
-			<img src="imagens/iniciar.png" onclick="iniciaJogo()">
+			<img style="width: 95px;  height: 80px; margin-left:45%;" src="imagens/iniciar.png" onclick="iniciaJogo()">
 		</div>
 		   
 
